Closed
Bug 1105781
Opened 11 years ago
Closed 11 years ago
js/src/jsfun.cpp:1905:67: error: reference to 'NullPtr' is ambiguous (JS::NullPtr vs. js::NullPtr) in unified build
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
Tracking | Status | |
---|---|---|
firefox34 | --- | unaffected |
firefox35 | --- | fixed |
firefox36 | --- | fixed |
firefox37 | --- | fixed |
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
Attachments
(1 file)
1.12 KB,
patch
|
bzbarsky
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
--enable-unified-compilation on Aurora 35 fails with:
In file included from js/src/Unified_cpp_js_src7.cpp:137:
js/src/jsfun.cpp:1905:67: error: reference to 'NullPtr' is ambiguous
/* enclosingScope = */ NullPtr());
^
dist/include/js/RootingAPI.h:135:8: note: candidate found by name lookup is 'js::NullPtr'
struct NullPtr
^
dist/include/js/RootingAPI.h:165:22: note: candidate found by name lookup is 'JS::NullPtr'
struct JS_PUBLIC_API(NullPtr)
^
js/src/jstypes.h:70:30: note: expanded from macro 'JS_PUBLIC_API'
# define JS_PUBLIC_API(t) t
^
1 error generated.
Comment on attachment 8529845 [details] [diff] [review]
fix?
js::NullPtr() is already used in other places in the file.
Attachment #8529845 -
Flags: review?(bzbarsky)
status-firefox34:
--- → unaffected
status-firefox35:
--- → affected
status-firefox36:
--- → unaffected
![]() |
||
Comment 4•11 years ago
|
||
Comment on attachment 8529845 [details] [diff] [review]
fix?
Yeah, makes sense.
Attachment #8529845 -
Flags: review?(bzbarsky) → review+
Keywords: checkin-needed
Comment on attachment 8529845 [details] [diff] [review]
fix?
Approval Request Comment
[Feature/regressing bug #]: bug 1083648 regression
[User impact if declined]: --enable-unified-compilation broken in Firefox 35.0. Downstream consumers have to disable the option and experience slower build.
[Describe test coverage new/current, TBPL]: comment 3, comment 5 and inbound soon.
[Risks and why]: Low, unlikely to even break build.
[String/UUID change made/needed]:
Attachment #8529845 -
Flags: approval-mozilla-aurora?
Comment on attachment 8529845 [details] [diff] [review]
fix?
Approval comment 6. Need on Beta because of recent uplift.
Attachment #8529845 -
Flags: approval-mozilla-beta?
Comment 8•11 years ago
|
||
Assignee: nobody → jbeich
Keywords: checkin-needed
Comment 9•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Updated•11 years ago
|
Attachment #8529845 -
Flags: approval-mozilla-beta?
Attachment #8529845 -
Flags: approval-mozilla-beta+
Attachment #8529845 -
Flags: approval-mozilla-aurora?
Attachment #8529845 -
Flags: approval-mozilla-aurora+
Updated•11 years ago
|
status-firefox37:
--- → fixed
Comment 10•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•