Bug 1105781 - Unbreak unified build after bug 1083648. r=bz, a=sledru