js/src/jsfun.cpp
@@ -1916,7 +1916,7 @@ FunctionConstructor(JSContext *cx, unsigned argc, Value *vp, GeneratorKind gener
         ok = frontend::CompileStarGeneratorBody(cx, &fun, options, formals, srcBuf);
     else
         ok = frontend::CompileFunctionBody(cx, &fun, options, formals, srcBuf,
-                                           /* enclosingScope = */ NullPtr());
+                                           /* enclosingScope = */ js::NullPtr());
     args.rval().setObject(*fun);
     return ok;
 }
